in progress, only annotator left to migrate to new resolver